--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
-{% block content%}
+{% block content %}
     <h1>About Page</h1>
-{% endblock content%}
+    <div>
+        <p>About page comming soon...</p>
+    </div>
+{% endblock content %}
