--- a/templates/home.html
+++ b/templates/home.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
 
-    {% for post in posts %}
+    {% for post in data %}
         <article class="media content-section">
           <div class="media-body">
             <div class="article-metadata">
@@ -14,3 +14,4 @@
         </article>
     {% endfor %}
 {%endblock content%}
+
