--- a/templates/register.html
+++ b/templates/register.html
@@ -34,7 +34,7 @@
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already Have An Account?
+            Already Have An Account? <a class="ml-2" href="{{ url_for('home')}}">Sign In</a>
         </small>
     </div>
 {% endblock content %}
