--- a/templates/register.html
+++ b/templates/register.html
@@ -32,9 +32,10 @@
             </div>
         </form>
     </div>
+
     <div class="border-top pt-3">
         <small class="text-muted">
-            Already Have An Account? <a class="ml-2" href="{{ url_for('home')}}">Sign In</a>
+            Already Have An Account? <a class="ml-2" href="{{ url_for('home')}}">Sign In</a> <!-- home is the name of the function not the name of the ROUTE -->
         </small>
     </div>
 {% endblock content %}
