--- a/templates/layout.html
+++ b/templates/layout.html
@@ -41,6 +41,8 @@
         <main role="main" class="container">
               <div class="row">
                 <div class="col-md-8">
+                {% with messages = get_flashed_messages(with_categories=true) %}
+                {% endwith %}
                   {% block content %}{% endblock %}
                 </div>
                 <div class="col-md-4">
